# Fluffy_Assistent

./: .env.example  .gitattributes  .gitignore  LEARNING_PHASE.md  README.md  debug_learning.py  download_vosk_model.py  final_test.py  fix_syntax.py  install_audio.py  requirements.txt  setup_env.bat  setup_env.ps1  setup_env.sh  setup_voice.py  test_baselines_structure.py  test_bluetooth.py  test_bluetooth_full.py  test_imports.py  test_learning_phase.py  test_registry.py  test_tts_chunking.py  test_voice_system.py  verify_api.py  verify_reset.py
brain/: action_validator.py  alerts.py  app_utils.py  backup_manager.py  chat_history.py  code_generator.py  code_validator.py  command_executor.py  command_parser.py  commands.py  debug_api.py  extension_creator.py  extension_loader.py  guardian_manager.py  intent_handler.py  interpreter.py  interrupt_handler.py  listener.py  llm_command_parser.py  memory.py  net_utils.py  platform_utils.py  recommender.py  requirements.txt  security_monitor.py  self_improver.py  state.py  test_extension_notifications.py  tray.py  verify_insights.py  verify_protection.py  view_extensions.py  web_api.py
core/: Cargo.toml  build_errors.txt  core_output.txt
core/src/: etw.rs  main.rs
core/src/actions/: filesystem.rs  launcher.rs  mod.rs  safety.rs
core/src/ipc/: command.rs  receiver.rs  server.rs
core/src/permissions/: policy.rs
data/: chat_index.json
documentation/: CODE_EXPLANATIONS.md  FREE_LLM_OPTIONS.md  FUNCTIONALITY_GUIDE.md  LLM_SETTINGS_API.md  LLM_SETUP.md  README.md  STT_SETUP.md  VOICE_COMMANDS.md  VOICE_SETUP.md  agent.md  (+4 more)
(+121 files in other folders)
