[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.52", features = ["Win32_Security", "Win32_System_Registry", "Win32_Foundation"] }
dashmap = "6.1"
ferrisetw = "1.2"

